landing and route to catalogue

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+    --dark-color: #000814;
+    --hover-white: #757575;
+    --text-color: white;
+}
+body {
+  font-family: "Anta", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  font-style: normal;
+}
