--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main>
   <header>
-    <img src="./favicon.ico" alt="" class="logo" routerLink="">
+    <img src="./favicon.ico" alt="" class="logo" routerLink="/">
     <h2 routerLink="catalogue" class="link">Catalogue</h2>
     <h2 class="link">About us</h2>
   </header>
