--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,4 +1,4 @@
-<section class="car">
+<section class="car" [routerLink]="['/catalogue', car.id]">
     <img [src]="car.photo" alt="photo" class="photo">
     <h2>{{ car.brand }} {{car.model}}</h2>
     <p> {{ car.price }}</p>
