--- a/src/app/car/car.component.css
+++ b/src/app/car/car.component.css
@@ -1,15 +1,43 @@
 .car {
-  background: var(--text-color);
-  border-radius: 30px;
-  padding: 30px;
-  transition: all 0.3s ease-in-out;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 300px; /* Set a fixed height for the section */
+  background-position: center;
+  color: white; /* Set text color */
+  margin: 10px;
+  width: 380px;
+  height: 300px;
+  background-color: var(--dark-color);
+  z-index: 1;
 }
-.car:hover {
-  filter: brightness(0.7);
-}
+
 .photo {
-  height: 250px;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
   object-fit: cover;
-  border-radius: 30px;
+  opacity: 1;
+  border-radius: 20px;
+  transition: ease-in-out 0.3s;
+  z-index: 2;
+  background-size: cover;
+}
+.car:hover .photo{
+  transform: scale(1.05);
+}
+.brand {
+  z-index: 3;
+  position: absolute;
+  top: 10px;
+}
+.price {
+  z-index: 3;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
 }
