--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,19 +1,24 @@
-<section>
-    <img class="photo" [src]="car?.photo" alt="photo of a car">
-    <h2>{{car?.model}}</h2>
-    <p>{{car?.horsepowers}}, {{car?.year}}, {{car?.price}}</p>
-</section>
-<section>
-    <h1>Rend car of your dream right now!</h1>
-    <form [formGroup]="carForm" (submit)="submitForm()">
-        <label for="name"></label>
-        <input formControlName="name">
-
-        <label for="surname"></label>
-        <input formControlName="surname">
-
-        <label for="phone"></label>
-        <input formControlName="phone">
-        <button type="submit" class="button">Submit form</button>
-    </form>
-</section>
+<article>
+    <section class="head">
+        <img class="photo" [src]="car?.photo" alt="photo of a car">
+        <div class="information">
+            <h1> {{car?.brand}} {{car?.model}} is the best car</h1>
+            <h2>This car has {{car?.horsepowers}} horsepowers, it was manufactured in {{car?.year}}, and it costs{{car?.price}} for a day</h2>
+        </div>
+    </section>
+    <section class="form">
+        <h2 style="color:green">{{text}}</h2>
+        <h1>Rent the car of your dream right now! </h1>
+        <form [formGroup]="carForm" (submit)="submitForm()">
+            <label for="name"></label>
+            <input formControlName="name" placeholder="Name">
+    
+            <label for="surname"></label>
+            <input formControlName="surname" placeholder="Surname">
+    
+            <label for="phone"></label>
+            <input formControlName="phone" placeholder="Phone">
+            <button type="submit" class="button">Submit form</button>
+        </form>
+    </section>
+</article>
