--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -48,10 +48,13 @@ input {
   border-bottom: solid .3px;
   border-radius: 5px;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1100px) {
   .listing-photo {
     width: 100%;
     height: 400px;
+  }
+  article {
+    display: grid;
   }
 }
 .button {
