--- a/src/app/catalogue/catalogue.component.css
+++ b/src/app/catalogue/catalogue.component.css
@@ -18,19 +18,53 @@
 }
 .filter {
     background-color: var(--dark-color);
+    display: grid;
+    justify-content: center;
+    align-items: center;  
+    height: 100px;
+    padding: 10px;
 }
 .filterBtn {
     background-color: var(--text-color);
     color: var(--dark-color);
     font-family: inherit;
-    font-size: 44px;
+    font-size: 28px;
     padding: 10px;
     border-radius: 8px;
-    margin: 10px;
+    margin: 10px 10px 0 10px;
 }
 .filterBtn:active {
     transform: scale(0.9);
 }
+
+.dropdown {
+  display: none ;
+  position: relative;
+  top: 0;
+  left: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 2;
+  margin: 0 10px 0 10px; 
+  border-radius: 10px;
+}
+.dropdown a {
+  padding: 12px 16px;
+  display: block;
+  text-decoration: none;
+  color: black;
+}
+
+.dropdown a:hover {
+  background-color: var(--hover-white);
+  border-radius: inherit;
+}
+
+.active {
+  display: block;
+}
+
 
 .results {
     background: var(--dark-color);
