--- a/src/app/catalogue/catalogue.component.html
+++ b/src/app/catalogue/catalogue.component.html
@@ -3,11 +3,14 @@
     <p class="grad">Only the best cars with the full security package</p>
 </section>
 <section class="filter">
-    <button class="filterBtn" (click)="toggleButton()">Filter by brand ↓</button>
-    <div class="dropdown" [ngClass]="{ 'active': isToggled }">
-        @for (option of dropdownOptions; track option) {
-            <a (click)="filterCars(option)"> {{option}} </a>
-        }
+    <button class="Btn">All brands</button>
+    <div class="BrandFiltering">
+        <button class="Btn" (click)="toggleButton()">Filter by brand ↓</button>
+        <div class="dropdown" [ngClass]="{ 'active': isToggled }">
+            @for (brand of uniqueBrands; track brand) {
+                <a (click)="filterCars(brand)"> {{brand}} </a>
+            }
+        </div>
     </div>
 </section>
 <section class="results">
