practiced navigateEnd and start and made @defer

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,8 @@
-<section>
-    <div class="landing">
-        <h1>Renting premium cars</h1>
-        <button class="button" routerLink="/catalogue">Go to catalogue</button>
+<section #trigger>
+    <div class="landing" >
+        <h1 >Renting premium cars</h1>
+        @defer (on hover(trigger)) {
+            <button class="button" routerLink="/catalogue">Go to catalogue</button>
+        }
     </div>
 </section>
