Added about component and added lazy loading to it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <header>
     <img src="./favicon.ico" alt="" class="logo" routerLink="/">
     <h2 routerLink="catalogue" class="link">Catalogue</h2>
-    <h2 class="link">About us</h2>
+    <h2 routerLink="about">About us</h2>
   </header>
   <section>
     <router-outlet></router-outlet>
