--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <section #trigger>
     <div class="landing" >
         <h1 >Renting premium cars</h1>
-        @defer (on hover(trigger)) {
+        @defer (on viewport(trigger)) {
             <button class="button" routerLink="/catalogue">Go to catalogue</button>
         }
     </div>
