--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -3,7 +3,7 @@
         <img class="photo" [src]="car?.photo" alt="photo of a car">
         <div class="information">
             <h1> {{car?.brand}} {{car?.model}} is the best car</h1>
-            <h2>This car has {{car?.horsepowers}} horsepowers, it was manufactured in {{car?.year}}, and it costs{{car?.price}} for a day</h2>
+            <p>This car has {{car?.horsepowers}} horsepowers, it was manufactured in {{car?.year}}, and it costs{{car?.price}} for a day</p>
         </div>
     </section>
     <section class="form">
