--- a/src/app/car/car.component.css
+++ b/src/app/car/car.component.css
@@ -1,23 +1,32 @@
 .car {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 300px; /* Set a fixed height for the section */
+  display: grid;
+  place-content: center;
   background-position: center;
   color: white; /* Set text color */
-  margin: 10px;
-  width: 380px;
-  height: 300px;
+  margin: 3px;
+  width: 300px;
+  height: 260px;
   background-color: var(--dark-color);
   z-index: 1;
 }
-
+@media screen and (min-width: 600px) {
+  .car {
+    position: relative;
+    display: grid;
+    place-content: center;
+    background-position: center;
+    color: white; /* Set text color */
+    margin: 10px;
+    width: 400px;
+    height: 260px;
+    background-color: var(--dark-color);
+    z-index: 1;
+  }
+}
 .photo {
   position: absolute;
-  top: 0;
-  left: 0;
+  margin: 0 auto;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -31,9 +40,11 @@
   transform: scale(1.05);
 }
 .brand {
+  font-size: 20px;
   z-index: 3;
   position: absolute;
-  top: 10px;
+  top: 5px;
+  left: 5px;
 }
 .price {
   z-index: 3;
