--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -1,77 +1,104 @@
 article {
     padding: 20px;
-    display: flex;
 }
+
+.head, .form {
+    padding: 10px;
+}
+
 .head {
-    display: grid;
-    justify-content: start;
-}
-.photo {
-  height: 400px;
-  width: auto;
-  object-fit: cover;
-  border-radius: 30px;
-}
-h1 {
-    font-size: 54px;
-}
-.information {
-    color: var(--dark-color); 
-    text-align: start;
-    padding-top: 40px;
-}
-.form {
-    margin: 30px;
-    display: grid;
     text-align: center;
 }
-form {
-    margin: 10px auto;
-}
-label, input {
-  display: block;
-}
-label {
-  color: var(--secondary-color);
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 12pt;
-}
-input { 
-  font-size: 16pt;
-  margin-bottom: 15px;
-  padding: 10px;
-  width: 400px;
-  border-top: none;
-  border-right: none;
-  border-left: none;
-  border-bottom: solid .3px;
-  border-radius: 5px;
-}
-@media (max-width: 1100px) {
-  .listing-photo {
+
+.photo {
+    height: auto;
     width: 100%;
-    height: 400px;
-  }
-  article {
-    display: grid;
-  }
+    max-width: 400px;
+    border-radius: 30px;
 }
+
+.information, .form {
+    margin-top: 20px;
+}
+
+.form {
+    text-align: center;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: 5px;
+    color: var(--secondary-color);
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12pt;
+}
+
+input {
+    display: block;
+    width: 100%;
+    font-size: 16pt;
+    margin-bottom: 15px;
+    padding: 10px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: solid .3px;
+    border-radius: 5px;
+}
+
 .button {
-    font-size: 32px;
+    display: block;
+    margin: 30px auto;
+    font-size: 20px;
     font-family: inherit;
     color: var(--text-color);
-    padding: 24px;
+    padding: 12px 24px;
     border-radius: 6px;
     background: var(--dark-color);
-    border: 1px white solid;
+    border: 1px solid white;
     transition: 0.4s ease;
 }
+
 .button:hover {
     background: var(--text-color);
     color: var(--dark-color);
     border: var(--dark-color) solid 1px;
 }
+
 .button:active {
     transform: scale(0.95);
+}
+
+@media screen and (min-width: 600px) {
+    article {
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-start;
+    }
+
+    .head, .form {
+        flex: 1;
+    }
+
+    .form {
+        margin-left: 20px;
+        text-align: left;
+    }
+
+    .button {
+        font-size: 32px;
+    }
+    h1 {
+      font-size: 30px;
+    }
+    p {
+      font-size: 20px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .photo {
+        max-width: 100%;
+    }
 }
