--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -74,7 +74,7 @@ input {
     article {
         display: flex;
         justify-content: space-around;
-        align-items: flex-start;
+        align-items: center;
     }
 
     .head, .form {
@@ -93,7 +93,7 @@ input {
       font-size: 30px;
     }
     p {
-      font-size: 20px;
+      font-size: 24px;
     }
 }
 
