--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,16 @@
   <section>
     <router-outlet></router-outlet>
   </section>
+  <footer class="footer">
+    <div class="footer-content">
+        <div class="footer-section about">
+            <h2>About Us</h2>
+            <p>We are a passionate team dedicated to providing the best car rental experience.</p>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        &copy; 2024 Car Rental App | Designed by Simon Chern
+    </div>
+</footer>
+
 </main>
