--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,5 @@ body {
   font-size: 15px;
   font-style: normal;
 }
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
