--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,3 +27,30 @@ header {
         transition: .3s;
     }
 }
+.footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0 0 0;
+}
+
+.footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+}
+
+.footer-section {
+    padding: 20px;
+}
+
+.footer-section h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.footer-bottom {
+    background-color: #222;
+    color: #aaa;
+    text-align: start;
+    padding: 10px 0 10px 10px;
+}
