--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -33,3 +33,15 @@ section {
 .button:active {
     transform: scale(0.95);
 }
+@media screen and (max-width: 600px) {
+    .button {
+        font-size: 30px;
+        font-weight: 700;
+        border: 2px white solid;
+        /* background-color: var(--text-color);
+        color: var(--dark-color); */
+    }
+    h1 {
+        font-size: 50px;
+    }
+}
