--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <main>
   <header>
-    <img src="./favicon.ico" alt="" class="logo" routerLink="/">
-    <h2 routerLink="catalogue" class="link">Catalogue</h2>
-    <h2 routerLink="about">About us</h2>
+    <img src="assets/imag.png" alt="" class="logo" routerLink="/">
+    <h2 routerLink="catalogue" class="link">Каталог</h2>
+    <h2 routerLink="about" class="link">O нас</h2>
   </header>
   <section>
     <router-outlet></router-outlet>
@@ -10,12 +10,12 @@
   <footer class="footer">
     <div class="footer-content">
         <div class="footer-section about">
-            <h2>About Us</h2>
-            <p>We are a passionate team dedicated to providing the best car rental experience.</p>
+            <h2>Автосалон машин из Китая "Фарфор"</h2>
+            <p>Мы  - команда готовая предоставить лучший опыт покупки автомобиля из Китая.</p>
         </div>
     </div>
     <div class="footer-bottom">
-        &copy; 2024 Car Rental App | Designed by Simon Chern
+        &copy; 2024 "Фарфор". Все права защищены | Designed by Simon Chernopyatov
     </div>
 </footer>
 
