--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,6 +1,6 @@
 section {
     height: calc(100vh - 80px);
-    background-image: url('landing.jpg');
+    background-image: url('landing2.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -35,7 +35,7 @@ section {
 }
 @media screen and (max-width: 600px) {
     .button {
-        font-size: 30px;
+        font-size: 24px;
         font-weight: 700;
         border: 2px white solid;
         /* background-color: var(--text-color);
