--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,25 @@
-<p #trigger>it works!</p>
-@defer (on viewport(trigger)) {
-    <p>about works!</p>
-}    @loading (minimum 500ms) {
-        <mat-spinner></mat-spinner>
-    }
+<section class="about-section">
+            <h2>Добро пожаловать в наш автосалон китайских автомобилей</h2>
+            <br>
+            <p>Мы являемся ведущим автосалоном, специализирующимся на продаже высококачественных автомобилей, импортированных из Китая. Благодаря нашей обширной сети и опыту, мы предлагаем вам лучший выбор китайских автомобилей по конкурентоспособным ценам.</p>
+            <br>
+            <p>Наша миссия - обеспечить наших клиентов исключительным сервисом и первоклассными автомобилями, которые удовлетворяют их потребности и превосходят их ожидания.</p>
+        </section>
+        <section class="team-section">
+            <h2>Наша команда</h2>
+            <div class="team-member">
+                <!-- <img src="team_member1.jpg" alt="Член команды 1"> -->
+                <h3>Виктор Иванов</h3>
+                <p>Генеральный директор</p>
+            </div>
+            <div class="team-member">
+                <!-- <img src="team_member2.jpg" alt="Член команды 2"> -->
+                <h3>Мария Сидорова</h3>
+                <p>Менеджер по продажам</p>
+            </div>
+            <div class="team-member">
+                <!-- <img src="team_member2.jpg" alt="Член команды 2"> -->
+                <h3>Анна Корпатова</h3>
+                <p>Агент в Китае</p>
+            </div>
+        </section>
