--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,8 +1,6 @@
-<section #trigger>
+<section>
     <div class="landing" >
-        <h1 >Renting premium cars</h1>
-        @defer (on viewport(trigger)) {
-            <button class="button" routerLink="/catalogue">Go to catalogue</button>
-        }
+        <h1>Скоро открытие! </h1>
+        <button class="button" routerLink="/catalogue">Перейти к каталогу</button>
     </div>
 </section>
