--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
     --text-color: white;
 }
 body {
-  font-family: "Anta", sans-serif;
+  font-family: "Mulish", "Anta", sans-serif;
   font-weight: 400;
   font-size: 15px;
   font-style: normal;
