--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <section class="about-section">
             <h2>Добро пожаловать в наш автосалон китайских автомобилей</h2>
             <br>
-            <p>Мы являемся ведущим автосалоном, специализирующимся на продаже высококачественных автомобилей, импортированных из Китая. Благодаря нашей обширной сети и опыту, мы предлагаем вам лучший выбор китайских автомобилей по конкурентоспособным ценам.</p>
+            <p>Мы являемся автосалоном, специализирующимся на продаже автомобилей, импортированных из Китая. Благодаря нашей обширной сети и опыту, мы предлагаем вам лучший выбор китайских автомобилей по конкурентоспособным ценам.</p>
             <br>
             <p>Наша миссия - обеспечить наших клиентов исключительным сервисом и первоклассными автомобилями, которые удовлетворяют их потребности и превосходят их ожидания.</p>
         </section>
