--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     <div class="footer-content">
         <div class="footer-section about">
             <h2>Автосалон машин из Китая "Фарфор"</h2>
-            <p>Мы  - команда готовая предоставить лучший опыт покупки автомобиля из Китая.</p>
+            <p>Мы  - команда, готовая предоставить лучший опыт покупки автомобиля из Китая.</p>
         </div>
     </div>
     <div class="footer-bottom">
