--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -5,8 +5,8 @@
             <h1> {{car?.brand}} {{car?.model}} напрямую из Китая!
             </h1>
             <p>Год производства: {{ car?.year }}</p>
-            <p>Мощность: {{ car?.horsepowers }}</p>
-            <p>Цена от: {{ car?.price }}</p>
+            <p>Мощность: {{ car?.horsepowers }} л.с</p>
+            <p>Цена от: {{ car?.price }} рублей</p>
         </div>
     </section>
     <section class="form">
