added text inderline on routeLinkActive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <main>
   <header>
     <img src="assets/imag.png" alt="" class="logo" routerLink="/">
-    <h2 routerLink="catalogue" class="link">Каталог</h2>
-    <h2 routerLink="about" class="link">O нас</h2>
+    <h2 routerLink="catalogue" routerLinkActive="active-link" class="link">Каталог</h2>
+    <h2 routerLink="about" routerLinkActive="active-link">O нас</h2>
   </header>
   <section>
     <router-outlet></router-outlet>
