--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,10 +18,6 @@ header {
 .logo {
     height: 40px;
 }
-.link:active {
-    transform: scale(0.9);
-    transition: all 0.3s;
-}
 
 @media (hover: none) {
     .link:active {
@@ -61,4 +57,8 @@ header {
     color: #aaa;
     text-align: start;
     padding: 10px 0 10px 10px;
+}
+
+.active-link {
+    text-decoration: underline;
 }
