--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,8 @@
         </div>
     </div>
     <div class="footer-bottom">
-        &copy; 2024 "Фарфор". Все права защищены | Designed by Simon Chernopyatov
+        <p>&copy; 2024 "Фарфор". Все права защищены </p>
+        <p>Designed by Simon Chernopyatov</p>
     </div>
 </footer>
 
